--- a/算法实验备考题/实验预考题.md
+++ b/算法实验备考题/实验预考题.md
@@ -1,4 +1,4 @@
-# 2023年秋季学期算法设计与分析实验课预考题、
+# 2023年秋季学期算法设计与分析实验课预考题
 
 Author：liulanker@gmail.com
 Data：2023-11-27
@@ -124,11 +124,76 @@ No
 	}
 
 	return 0;
-	} 
+    } 
 
 
 --- 
 ### 加一乘二平方
+
+#### AC简便码：
+    #include <iostream>
+    #include <queue>
+    #include <stdio.h>
+
+    using namespace std;
+
+    int m , n ; 
+    int step[10005];
+    bool used[10005];
+    queue<int> q;
+
+    int doit(int k ,int u){
+    if(k==0){
+        return u+1;
+    }
+    if(k==1){
+        return u*2;
+    }
+    if(k==2){
+        return u*u;
+    }
+    }
+
+    void dfs(int a){
+    int u,v;
+    int flag;
+
+    while(!q.empty()){
+    flag=0;
+    u=q.front();
+    q.pop();
+
+    for(int k=0;k<3;k++){
+        v=doit(k,u);
+        if(v==n){
+            flag=1;
+            printf("%d",(step[u]+1));
+            break;
+        }
+        else if(v<n && used[v]){
+            used[v]=false;
+            step[v]=step[u]+1;
+            q.push(v);
+        }
+    }
+
+    
+    if(flag==1){
+        break;
+    }
+    }
+    }
+    int main(){
+    scanf("%d%d",&m,&n);
+    for(int i=m+1;i<=n;i++){
+        used[i]=true;
+    }
+    q.push(m);
+    step[m]=0;
+    used[m]=false;
+    dfs(m);
+    return 0;
+    }
 ### 求第k小数
 
 
@@ -344,8 +409,10 @@ A.......
 ....A...
 
 提示
-输出样例是正确输出结果的前几行。
-####　AC简便码：
+输出样例是正确输出结果的前几行。  
+
+#### AC简便码：  
+
 
     #include<stdio.h>
     #define n 8
@@ -419,3 +486,57 @@ A.......
     }
 ---
 ### 最长公共子序列
+算法noj原题：
+描述
+一个给定序列的子序列是在该序列中删去若干元素后得到的序列。确切地说，若给定序列X=<x1, x2,…, xm>，则另一序列Z=<z1, z2,…, zk>是X的子序列是指存在一个严格递增的下标序列 <i1, i2,…, ik>，使得对于所有j=1,2,…,k有：
+
+Xij ＝ Zj
+
+如果一个序列S即是A的子序列又是B的子序列，则称S是A、B的公共子序列。
+求A、B所有公共子序列中最长的序列的长度。
+
+输入
+输入共两行，每行一个由字母和数字组成的字符串，代表序列A、B。A、B的长度不超过200个字符。
+
+输出
+一个整数，表示最长各个子序列的长度。
+格式：printf("%d\n");
+
+输入样例
+programming
+contest
+
+输出样例
+2
+
+#### AC简便码：
+    #include <iostream>
+    #include <math.h>
+    #include<stdio.h>
+    #include <string.h>
+
+    using namespace std;
+
+    int main(){
+    char a[205],b[205];
+    int l[205][205]={0};
+
+    fgets(a,205,stdin);
+    fgets(b,205,stdin);
+
+    for(int i=1;i<=strlen(a);i++){
+        for(int j=1;j<=strlen(b);j++){
+            if(a[i-1]==b[j-1]){
+                l[i][j]=l[i-1][j-1]+1;
+            }
+            else {
+                l[i][j]=max(l[i][j-1],l[i-1][j]);
+            }
+            
+
+        }
+    }
+    printf("%d",(l[strlen(a)][strlen(b)]-1));
+ 
+    return 0;
+    }
